tests/baselines/reference/inDoesNotOperateOnPrimitiveTypes.errors.txt
tests/cases/compiler/inDoesNotOperateOnPrimitiveTypes.ts(19,17): error TS2361: The right-hand side of an 'in' expression must be of type 'any', an object type or a type parameter.


==== tests/cases/compiler/inDoesNotOperateOnPrimitiveTypes.ts (1 errors) ====
    const validHasKey = <T extends object>(
      thing: T,
      key: string,
    ): boolean => {
      return key in thing;
    };
    
    const alsoValidHasKey = <T>(
      thing: T,
      key: string,
    ): boolean => {
      return key in thing;
    };
    
    function invalidHasKey<T extends string | number>(
      thing: T,
      key: string,
    ): boolean {
      return key in thing;
                    ~~~~~
!!! error TS2361: The right-hand side of an 'in' expression must be of type 'any', an object type or a type parameter.
    }
    